# CHIMP

./: .clang-format  .clang-tidy  .gitignore  CHIMP.pro  CMakeLists.txt  LICENSE  README.md  build.sh  run-clang-format.py
form/: mainwindow.ui  penwidthdialog.ui  resizewindow.ui
hdr/: constants.h  content_view.h  histogram.h  imageHistory.h  mainwindow.h  painter.h  parameters.hpp  tools.h
resource/: StyleResources.qrc  icons.qrc
resource/qss/: AMOLED.qss
src/: content_view.cpp  histogram.cpp  imageHistory.cpp  main.cpp  mainwindow.cpp  painter.cpp  parameters.cpp  tools.cpp
